[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["ac2393921 <ac2393921@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
black = "^23.9.1"
flake8 = "^6.1.0"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pydantic = {extras = ["email"], version = "^2.4.2"}
pymysql = "^1.1.0"
bcrypt = "^4.0.1"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
